@@ -1000,7 +1000,7 @@ module ActiveRecord #:nodoc:
         # Nest the type name in the same module as this class.
         # Bar is "MyApp::Business::Bar" relative to MyApp::Business::Foo
         def type_name_with_module(type_name)
-          "#{self.name.sub(/(::)?[^:]+$/, '')}#{$1}#{type_name}"
+          (/^::/ =~ type_name) ? type_name : "#{parent.name}::#{type_name}"
         end
 
         def construct_finder_sql(options)
