@@ -1257,6 +1257,11 @@ class BasicsTest < Test::Unit::TestCase
     assert_equal(%w( title ), topics(:first).attributes(:only => :title).keys)
     assert_equal(%w( title author_name type id approved ), topics(:first).attributes(:only => [ :title, :id, :type, :approved, :author_name ]).keys)
   end
+  
+  def test_type_name_with_module_should_handle_beginning
+    assert_equal 'ActiveRecord::Person', ActiveRecord::Base.send(:type_name_with_module, 'Person')
+    assert_equal '::Person', ActiveRecord::Base.send(:type_name_with_module, '::Person')
+  end
 
   # FIXME: this test ought to run, but it needs to run sandboxed so that it
   # doesn't b0rk the current test environment by undefing everything.
