@@ -1,3 +1,5 @@
+* Fix type_name_with_module to handle type names that begin with '::'. Closes #4614. [Nicholas Seckar]
+
 *1.14.1* (April 6th, 2005)
 
 * Enable Limit/Offset in Calculations (closes #4558) [lmarlow@yahoo.com]
